fix proj button spacing

--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -41,18 +41,15 @@
 .projSectionHeader {
   display: flex;
   justify-content: center;
-  align-items: center;
-  top: 20px;
 }
 
 .projTitle {
   display: flex;
-  align-items: center;
+  justify-content: center;
   font-style: oblique;
   font-weight: bold;
   font-size: 30px;
   margin-top: 5px;
-  top: 20px;
 }
 
 #projButton {
@@ -60,6 +57,8 @@
   justify-content: center;
   align-items: center;
   border-color: gray;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
 #nextProject {
